k8s/01-namespace-storage.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: sales-portal
  labels:
    name: sales-portal
